was added point list images with pagination
